Portability fixes for OpenBSD, a "secure" operating system written by evil half-educated dwarves; an OS that earnestly advises the developer to use nonportable functions in place of POSIX standards (strlcpy() for strcpy()) on the principle that the POSIX standard function is "almost always misused" -- while meanwhile, at least two important OpenBSD headers are seriously and obviously broken, failing to include their own dependencies, forcing the developer to include them in a specific order.
To include <sys/sysctl.h>, OpenBSD requires <sys/param.h> to be
included first. This requires special handling in configure.ac,
because GNU autoconf (rightly) does not expect to have to include
auxiliary dependencies when it tests for sys/sysctl.h presence and
functionality.

Similar change, plus one other for <arpa/inet.h> depending on
<netinet/in.h>, has also been made in H3.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@829 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/configure.ac
+++ b/configure.ac
@@ -388,7 +388,37 @@ AS_IF([test "x$with_gsl" != xno],
 
 # 6. Checks for header files.
 #    Defines preprocessor symbols like HAVE_UNISTD_H
-AC_CHECK_HEADERS([sys/types.h sys/sysctl.h unistd.h strings.h stdint.h inttypes.h endian.h])
+AC_CHECK_HEADERS([\
+  endian.h \
+  inttypes.h \
+  stdint.h \
+  unistd.h \
+  sys/types.h \
+  strings.h \
+])
+
+# Check for sysctl.h separately.  On OpenBSD, it requires
+# <sys/param.h> and autoconf needs special logic to deal w. this as
+# follows.
+AC_CHECK_HEADERS([sys/param.h])
+AC_CHECK_HEADERS([sys/sysctl.h], [], [], 
+[[#ifdef HAVE_SYS_PARAM_H
+#include <sys/param.h>
+#endif
+]])
+
+# Vector-specific headers. 
+# Separated, because we may want to implement
+# other vector languages besides SSE
+# For SSE:
+#  xmmintrin.h = SSE
+#  emmintrin.h = SSE2
+#  pmmintrin.h = SSE3
+AC_CHECK_HEADERS([\
+  emmintrin.h\
+  pmmintrin.h\
+  xmmintrin.h
+])
 
 # altivec.h requires the simd cflags
 # For reasons I don't understand, this needs to come after any other CHECK_HEADERS().
