--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -95,6 +95,30 @@
 #undef HAVE_TIMES
 
 
+/* Many MPI implementations are not MPI2.2 compliant, and do not
+ * support new MPI2.2 datatypes; work around that absence. [J10/152]
+ */
+#ifdef HAVE_MPI
+#if MPI_VERSION < 2 || MPI_SUBVERSION < 2
+#ifndef MPI_INT64_T
+#define MPI_INT64_T  MPI_LONG_LONG_INT
+#endif
+#ifndef MPI_UINT64_T
+#define MPI_UINT64_T MPI_UNSIGNED_LONG_LONG
+#endif
+#ifndef MPI_UINT32_T
+#define MPI_UINT32_T MPI_UNSIGNED
+#endif
+#ifndef MPI_INT16_T
+#define MPI_INT16_T  MPI_SHORT
+#endif
+#ifndef MPI_UINT8_T
+#define MPI_UINT8_T  MPI_UNSIGNED_CHAR
+#endif
+#endif /*MPI_VERSION,MPI_SUBVERSION*/
+#endif /*HAVE_MPI*/
+
+
 /*****************************************************************
  * Available augmentations.
  * 
