esl_composition.[ch] split out to a new module, from easel.[ch].
Heads up (Eric and Infernal especially): any .c file using an
esl_composition_*() function will now have to #include
"esl_composition.h".

(I'm thinking of adding a function that would automatically fill out
the degenerate residue marginal probabilities, starting from a vector
of canonical frequencies; that'd introduce a dependency on
esl_alphabet, and we can't have easel.[ch] dependent on any other
modules.)



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@849 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -82,6 +82,7 @@ HDRS = 	easel.h\
 	esl_alphabet.h\
 	esl_buffer.h\
 	esl_cluster.h\
+	esl_composition.h\
 	esl_dirichlet.h\
 	esl_distance.h\
 	esl_dmatrix.h\
@@ -143,6 +144,7 @@ OBJS =	easel.o\
 	esl_alphabet.o\
 	esl_buffer.o\
 	esl_cluster.o\
+	esl_composition.o\
 	esl_dirichlet.o\
 	esl_distance.o\
 	esl_dmatrix.o\
