esl_normal implementation is no longer embarrassing, wrong; though still incomplete relative to other stats modules.  _pdf and _logpdf calculations fixed. _cdf, _surv revised for numeric range, to avoid catastrophic cancellation error w/ erf(); better to rearrange and use erfc().
unit tests improved. test driver added to auto test suite.

esl_stats_erfc() adapted from freely available Sun Microsystems
implementation. HAVE_ERFC test added to configure. stats module
defines erfc() to esl_stats_erfc() on non-C99 compliant platforms
(e.g. Microsoft). Noted the Sun licensed code in COPYRIGHT.

Deleted esl_normal_example driver, which wasn't doing much for
anyone. Renamed example2 driver as the new example.

Fixed a memory leak in esl_gumbel unit test driver.

Improved sqc so that when it's in verbose mode and it sees a valgrind
or mpi command, but it's not set up w/ -V/SQC_VALGRIND or -M/SQC_MPI
that tell it it's on a capable host, it issues one warning. I couldn't
figure out why valgrind tests weren't running under SQCLEVEL=3, forgot
that I added these extra controls for the nightly tests across many
platforms, some of which can't run valgrind or mpi.




git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@893 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -248,6 +248,7 @@ UTESTS =\
 	esl_msafile_selex_utest\
 	esl_msafile_stockholm_utest\
 	esl_msaweight_utest\
+	esl_normal_utest\
 	esl_random_utest\
 	esl_randomseq_utest\
 	esl_ratematrix_utest\
@@ -270,7 +271,6 @@ UTESTS =\
 #	minimizer_utest\
 #	mixgev_utest\
 #	mpi_utest\
-#	normal_utest\
 #	paml_utest\
 #	stopwatch_utest\
 #	swat_utest\
@@ -325,7 +325,6 @@ EXAMPLES = \
         esl_msashuffle_example\
         esl_msaweight_example\
         esl_normal_example\
-        esl_normal_example2\
         esl_random_example\
         esl_rootfinder_example\
         esl_rootfinder_example2\
