Added esl_gencode module: genetic codes. Added draft of esl-translate: translation utility that will replace squid's translate and easel's esl-stranslate.
Changed esl_fileparser to work better as a line-oriented parser.  Now
esl_fileparser_NextLine() loads next data-containing line in its
<buf>, and does not start parsing it for tokens. tok, toklen, and
tokchar fields removed from ESL_FILEPARSER.

Fixed bug in Genbank ASCII parser. When it was strchop()'ing DESC
line, it was passing nc as length of string <s>, but string <s> is
already bumped to column +12, so it needs nc-12.

Minor change in esl_regexp: its example 1 ifdef needs to be
eslREGEXP_EXAMPLE, not eslREGEXP_EXAMPLE1, to conform to conventions
used for other drivers.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@951 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -89,6 +89,7 @@ HDRS = 	easel.h\
 	esl_exponential.h\
 	esl_fileparser.h\
 	esl_gamma.h\
+	esl_gencode.h\
 	esl_getopts.h\
 	esl_gev.h\
 	esl_gumbel.h\
@@ -153,6 +154,7 @@ OBJS =	easel.o\
 	esl_exponential.o\
 	esl_fileparser.o\
 	esl_gamma.o\
+	esl_gencode.o\
 	esl_getopts.o\
 	esl_gev.o\
 	esl_gumbel.o\
@@ -293,6 +295,7 @@ EXAMPLES = \
         esl_fileparser_example\
         esl_fileparser_example2\
         esl_gamma_example\
+	esl_gencode_example\
         esl_getopts_example\
         esl_getopts_example2\
         esl_gev_example\
@@ -326,6 +329,9 @@ EXAMPLES = \
         esl_msaweight_example\
         esl_normal_example\
         esl_random_example\
+	esl_regexp_example\
+	esl_regexp_example2\
+	esl_regexp_example3\
         esl_rootfinder_example\
         esl_rootfinder_example2\
         esl_scorematrix_example\
