Many tweaks to reduce bitching by clang static analysis.
ESL_ALLOC() and _REALLOC() of 0 size now return eslEMEM error, not
NULL. Having them return NULL confuses clang.

ESL_ANALYZER_NORETURN macro added: to tell clang that esl_fatal() is a
fatal error handler that never returns.




git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@953 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -92,6 +92,8 @@
 #undef HAVE_TIMES
 #undef HAVE_ERFC
 
+#undef HAVE_FUNC_ATTRIBUTE_NORETURN // Compiler supports __attribute__ tag, which we use to help w/ clang static analysis.
+
 /*****************************************************************
  * Available augmentations.
  * 
