esl-translate added to miniapps (still needs some work, including its man page). esl-stranslate removed from miniapps.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@954 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -63,8 +63,8 @@ PROGS = esl-afetch\
 	esl-sfetch\
 	esl-shuffle\
 	esl-ssdraw\
-  esl-stranslate\
-	esl-weight\
+        esl-translate\
+	esl-weight
 
 PROGOBJS =\
 	esl-afetch.o\
@@ -87,8 +87,8 @@ PROGOBJS =\
 	esl-sfetch.o\
 	esl-shuffle.o\
 	esl-ssdraw.o\
-  esl-stranslate.o\
-	esl-weight.o\
+        esl-translate.o\
+	esl-weight.o
 
 
 # beautification magic stolen from git 
