Added options to esl-translate so it can use any alternative genetic code (-c <id>), use AUG initiators (-m), use initiators specified by an NCBI genetic code including alternatives (-M), translate only the top or bottom strand (--watson, --crick).
Added a man page for it.

This makes esl-translate almost fully functional now, though it still
isn't quite ready for use; needs testing code.




git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@955 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -63,6 +63,7 @@ PROGS = esl-afetch\
 	esl-sfetch\
 	esl-shuffle\
 	esl-ssdraw\
+	esl-stranslate\
         esl-translate\
 	esl-weight
 
@@ -87,6 +88,7 @@ PROGOBJS =\
 	esl-sfetch.o\
 	esl-shuffle.o\
 	esl-ssdraw.o\
+        esl-stranslate.o\
         esl-translate.o\
 	esl-weight.o
 
