esl-translate is now ready for use.
Improved how it handles degenerate DNA sequence. Now it correctly
checks whether degenerate codon can be uniquely mapped to an
initiation codon.

esl_gencode unit testing added.
esl-translate integrated test (esl-translate.itest.pl) added.

esl_translate module deleted.
esl-stranslate miniapp deleted.
I don't think any other code was calling esl_trans_* functions.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@957 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -135,7 +135,6 @@ HDRS = 	easel.h\
 	esl_stopwatch.h\
 	esl_stretchexp.h\
 	esl_threads.h\
-	esl_translate.h\
 	esl_tree.h\
 	esl_vectorops.h\
 	esl_vmx.h\
@@ -200,7 +199,6 @@ OBJS =	easel.o\
 	esl_stopwatch.o\
 	esl_stretchexp.o\
 	esl_threads.o\
-	esl_translate.o\
 	esl_tree.o\
 	esl_vectorops.o\
 	esl_vmx.o\
@@ -231,6 +229,7 @@ UTESTS =\
 	esl_exponential_utest\
 	esl_fileparser_utest\
 	esl_gamma_utest\
+	esl_gencode_utest\
 	esl_getopts_utest\
 	esl_gumbel_utest\
 	esl_heap_utest\
@@ -296,6 +295,7 @@ EXAMPLES = \
         esl_fileparser_example2\
         esl_gamma_example\
 	esl_gencode_example\
+	esl_gencode_example2\
         esl_getopts_example\
         esl_getopts_example2\
         esl_gev_example\
