Easel's coverage_report.pl (automating gcov stats on all unit tests) and valgrind_report.pl (automating valgrind testing of all unit test drivers) are now working again. Changes include changing getopts.pl to Getopt::Std (getopts is now obsolete in Perl). Removed compilation from the script, and left that as the responsibility of the Makefile or caller, because we don't want to hardcode compiler and cflags.
'make dcheck' is working again too. The "developer check" runs the
unit tests plus valgrind and coverage tests, and concatenates one
report in dcheck.report. Made sure that it works from a separate build
directory, not only from a single source/build dir.

Removed driver_report.pl. It's redundant w/ what make dev is already
doing, compiling all the drivers of all types.

Fixed some small errors in esl_hmm and esl_heap.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@960 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -234,6 +234,7 @@ UTESTS =\
 	esl_gumbel_utest\
 	esl_heap_utest\
 	esl_histogram_utest\
+	esl_hmm_utest\
 	esl_hyperexp_utest\
 	esl_keyhash_utest\
 	esl_mem_utest\
@@ -305,6 +306,7 @@ EXAMPLES = \
         esl_histogram_example3\
         esl_histogram_example4\
         esl_histogram_example5\
+        esl_hmm_example\
         esl_hyperexp_example\
         esl_keyhash_example\
         esl_minimizer_example\
