--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -35,19 +35,22 @@ check:
 
 dcheck: 
 	@echo    Running developer testsuite...
+	@echo -n Compiling for unit tests and valgrind tests...
+	@(cd ..; make clean > /dev/null; testsuite/${top_srcdir}/configure --enable-debugging >/dev/null; make dev > /dev/null)       
+	@echo    done. 
 	@echo -n Running unit tests...
 	@${srcdir}/../devkit/sqc ${SQCLEVEL} ${srcdir}/testsuite.sqc .. ${srcdir}/..  >  utest.report
 	@echo    done. [See utest.report]
-	@echo -n Testing that all drivers compile...
-	@env CC="${CC}" CFLAGS="${CFLAGS}" ./driver_report.pl       >  driver.report
-	@echo    done. [See driver.report]
-	@echo -n Measuring test code coverage...
-	@env CC="${CC}" CFLAGS="${CFLAGS}" ./coverage_report.pl     >  coverage.report
-	@echo    done. [See coverage.report]
 	@echo -n Looking for memory leaks...
-	@env CC="${CC}" CFLAGS="${CFLAGS}" ./valgrind_report.pl     >  valgrind.report
+	@${srcdir}/valgrind_report.pl .. ${srcdir}/..  >  valgrind.report
 	@echo    done. [See valgrind.report]
-	@cat driver.report coverage.report valgrind.report utest.report > dcheck.report
+	@echo -n Recompiling for coverage tests...
+	@(cd ..; make clean > /dev/null; testsuite/${top_srcdir}/configure --enable-gcov > /dev/null; make tests > /dev/null)       
+	@echo    done. 
+	@echo -n Measuring test code coverage...
+	@${top_srcdir}/testsuite/coverage_report.pl .. ${top_srcdir} >  coverage.report
+	@echo    done. [See coverage.report]
+	@cat coverage.report valgrind.report utest.report > dcheck.report
 	@echo
 	@echo    Finished developer testsuite.
 	@echo    For a complete report, see dcheck.report.
@@ -56,10 +59,10 @@ clean:
 	-rm -f *.gcno *.gcda *.gcov
 	-rm -f esltmp??????
 	-rm -f *.o *~ 
-	-rm -f driver.report coverage.report valgrind.report utest.report
 	-rm -f ${PROGS} 
 
 distclean: clean
+	-rm -f coverage.report valgrind.report utest.report
 	rm Makefile
 
 ################################################################
