Improved cleanup after unit tests ('make check'), which had been leaving tmp files behind.
Added 'make gitclean' for an even cleaner clean that 'make distclean',
leaving the working directory in pristine condition as it is in the
repo, with even the configure script removed.

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -135,6 +135,10 @@ clean:
 	-rm -f *.o *~
 	-rm -f *.gcno *.gcda *.gcov
 	-rm -f TAGS
+	for prog in ${PROGS}; do\
+	   if test -d $$prog.dSYM; then rm -rf $$prog.dSYM; fi;\
+	done
+
 
 distclean: clean
 	-rm -f ${PROGS}
