--- a/Makefile.in
+++ b/Makefile.in
@@ -527,6 +527,10 @@ endif
 	-rm LICENSE.sh
 	-rm Makefile
 
+gitclean:  distclean
+	-rm configure
+
+
 # 'make REPOSITORY=... dist' : create a new distribution tarball
 #
 dist:
