In esl_stopwatch, added portable high-resolution elapsed timer <stopwatch_getRealTime()> from David Robert Nadeau: http://nadeausoftware.com/articles/2012/04/c_c_tip_how_measure_elapsed_real_time_benchmarking
esl_stopwatch_GetElapsed() returns elapsed time in seconds, as a
double, at high resolution (system-dependent; looks like I'm getting
at least microsecond resolution).

Needed this because I'm timing disk i/o, and I need accurate wall
(elapsed) times, not just cpu or sys, because there's other lags in
filesystem input besides what cpu time, sys time, or profiling are
measuring.

--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -94,6 +94,9 @@
 
 #undef HAVE_FUNC_ATTRIBUTE_NORETURN // Compiler supports __attribute__ tag, which we use to help w/ clang static analysis.
 
+/* Function behavior */
+#define eslSTOPWATCH_HIGHRES
+
 /*****************************************************************
  * Available augmentations.
  * 
