esl-dsqdata module added: higher performance sequence input, using asynchronous input, predigitized binary files, and bitpacked sequences.
This initial commit is the 0118 prototype [H1/65]. It reads sequence
data from disk at the maximum speed of the disk. Currently only
supports proteins and complete sequences; DNA (2bit packing) and
windowed reading still to come. Also, need to add header data, magic
numbers, error checking; unit testing and documentation.

Since we're at max disk speed, further substantive improvement must
come from reducing the size of the data.  Best remaining opportunity
for reducing data size: compressing or deferring metadata
(name/acc/desc). LZ4 can compress metadata 5x overall -- but we need
random access into our small metadata chunks, plus we need to worry
that even at LZ4 decompression speed, unpacker's cpu might not be able
to keep up with the loader's disk reads if it has to both unpack
sequence and decompress metadata. (We unpack at about 2.7G/s; LZ4
decompresses at about 2.2G/s.) In a deferred metadata strategy we'd
only read metadata for significant hits at the end of a search -- but
this depends on random access time, which can be very slow (~2
msec/access) on crappy HDD filesystems, so the tradeoff point is
surprisingly in favor of just reading everything: on my refprot
benchmark, it takes 11.8s to read 1.4G of metadata on my test HDD
filesystem (120MB/s), and in that time we could only read metadata for
6000 seqs. On SSD drives, deferred metadata becomes more attractive:
1.8s to read (800MB/s), 2 usec per random access, we can access
metadata for 900K seqs in the same time (8% of the database).

--- a/Makefile.in
+++ b/Makefile.in
@@ -86,6 +86,7 @@ HDRS = 	easel.h\
 	esl_dirichlet.h\
 	esl_distance.h\
 	esl_dmatrix.h\
+	esl_dsqdata.h\
 	esl_exponential.h\
 	esl_fileparser.h\
 	esl_gamma.h\
@@ -150,6 +151,7 @@ OBJS =	easel.o\
 	esl_dirichlet.o\
 	esl_distance.o\
 	esl_dmatrix.o\
+	esl_dsqdata.o\
 	esl_exponential.o\
 	esl_fileparser.o\
 	esl_gamma.o\
