esl_dsqdata: Binary headers added with magic number, unique tag. Error handling written. Documentation started.
Easel documentation book compiles again.

esl_sqio reorganized and cleaned up.

[xref SRE H1/65.]

--- a/Makefile.in
+++ b/Makefile.in
@@ -293,6 +293,8 @@ EXAMPLES = \
         esl_cluster_example\
         esl_dirichlet_example\
         esl_dmatrix_example\
+        esl_dsqdata_example\
+        esl_dsqdata_example2\
         esl_exponential_example\
         esl_fileparser_example\
         esl_fileparser_example2\
