utest_packing unit test added to dsqdata. (20% code coverage)
changed _pack5 and _pack2 routines so they take psq[] directly as an
argument, allowing them to write into caller-provided memory, in
addition to pack-in-place. Also, fixed them so they can handle L=0 seq.

esl_rnd_mem() added: fill a buffer with random garbage, for unit tests.

coverage_report.pl now displays an ascii art bar graph, not just %'s.

Timings from yesterday's commit were artifactual; that commit includes
a bug in DNA unpacking and only unpacks ~80% of the seq.

eslEUNIMPLEMENTED thrown by writer if a seq is too long
(chromosome-scale DNA is on TODO); thrown by reader if byteswapped
magic is seen (handling byte order is on TODO).

--- a/Makefile.in
+++ b/Makefile.in
@@ -228,6 +228,7 @@ UTESTS =\
 	esl_dirichlet_utest\
 	esl_distance_utest\
 	esl_dmatrix_utest\
+	esl_dsqdata_utest\
 	esl_exponential_utest\
 	esl_fileparser_utest\
 	esl_gamma_utest\
