In dsqdata, utest_readwrite added. Code coverage >90% now.
esl_sq_Sample() added: sampling a synthetic random sequence object,
for tests.

esl_FileNewSuffix() modified so caller may either provide its own
allocation for result, or ask for a new allocation.

esl_rsq_Sample() modified the same way.

updates to sq, dsqdata documentation.

--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -128,6 +128,7 @@
 #undef eslAUGMENT_MINIMIZER
 #undef eslAUGMENT_MSA		
 #undef eslAUGMENT_RANDOM
+#undef eslAUGMENT_RANDOMSEQ
 #undef eslAUGMENT_SSI
 #undef eslAUGMENT_STATS
 #endif
@@ -144,6 +145,7 @@
 #define eslAUGMENT_MINIMIZER
 #define eslAUGMENT_MSA		
 #define eslAUGMENT_RANDOM
+#define eslAUGMENT_RANDOMSEQ
 #define eslAUGMENT_SSI
 #define eslAUGMENT_STATS
 #endif
@@ -151,10 +153,3 @@
 
 #endif /*eslCONFIG_INCLUDED*/
 
-/*****************************************************************
- * @LICENSE@
- *
- * SVN $Id$
- * SVN $URL$
- * SRE, Fri Mar  3 08:03:32 2006 [St. Louis]
- *****************************************************************/
