'make tags' removed, added makeTAGS.sh instead. Now we can use tags searches without needing to ./configure.
Added _Shadow() to codestyle, using p7_oprofile_Shadow() as the first
example. Shadows are when we have a dependent, partially duplicated
copy of an object, for memory-efficient sharing across threads.

--- a/Makefile.in
+++ b/Makefile.in
@@ -588,46 +588,5 @@ implode:
 	-rm -f LICENSE.tag
 
 TAGS:
-	-rm -f ${top_srcdir}/TAGS
-	make tags-append
+	./makeTAGS.sh
 
-tags-append:
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/00CHECKLIST
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/BUGTRAX
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/INSTALL
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/LICENSE
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/aclocal.m4
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/configure.ac
-
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/*.c
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/*.h
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/*.tex
-
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/demotic/00README
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/demotic/*.pl
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/demotic/*.pm
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/demotic/blast*
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/demotic/fasta*
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/demotic/h2*
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/demotic/hmmer*
-
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/devkit/*
-
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/documentation/*.in
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/documentation/*.tex
-
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/miniapps/*.in
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/miniapps/*.c
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/miniapps/*.man
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/miniapps/*.pl
-
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/testsuite/*.in
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/testsuite/*.pl
-	etags -o ${top_srcdir}/TAGS -a ${srcdir}/testsuite/*.sqc
-
-################################################################
-# @LICENSE@
-#
-# SVN $URL$
-# SVN $Id$
-################################################################
